# python-project-49

./: .gitignore  README.md  makefile  pyproject.toml
brain_games/: __init__.py  common_functions.py  game_engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_game.py  even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_engine.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  cli.py  functions.py
brain_games/scripts/games/: brain_calc.py  brain_engine.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_game.py  common_logic.py  even_game.py  functions.py  game_engine.py  gcd_game.py  prime_game.py  progression_game.py
