[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Games for your brain. Train you calculating muscle in five games. Brain-even: guess if the number is even or not. Brain-calc: evaluate arithmetic expressions. Brain-gcd: calculate greatest common divisor. Brain-prime: find out whether the number is prime. Brain_progression: find out the missing element of arithmetic progression."
classifiers = ["Topic :: Games/Entertainment"]
authors = ["fiftinmen <fiftin.men@gmail.com>"]
readme = "README.md"
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
